src/FinancialForce Accounting/objects/AccountTypeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting allows users to specify default Accounts Receivable Control, Accounts Payable Control and Default Expense Account for Account.</description>
    <fields>
        <fullName>DefaultAPControl__c</fullName>
        <label>Default AP Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultARControl__c</fullName>
        <label>Default AR Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultExpenseControl__c</fullName>
        <label>Default Expense Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Account Type Settings (FF)</label>
</CustomObject>